idk if these project files should be tracked...

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>usbcan201x</name>
+	<name>usbcan</name>
 	<comment></comment>
 	<projects>
 	</projects>
